--- a/style.css
+++ b/style.css
@@ -23,9 +23,12 @@ ul {
     padding: 0;
 }
 
+li {
+    list-style: none;
+}
+
 .links-list {
     display: flex;
-    list-style: none;
     gap: 16px;
 }
  
@@ -35,8 +38,34 @@ a {
 }
 
 button {
-    border-radius: 16px;
-    border: 1px solid gray;
-    height:fit-content;
+    border-radius: 8px;
+    border: 1px solid black;
+    background-color: rgb(41, 100, 225);
+    height: 32px;
 }
 
+#contacto-button {
+    border: 1px solid gray;
+    background-color: white;
+}
+
+.oferta {
+    clear: both;
+    display: flex;
+    align-items:center
+}
+
+#oferta-texto-llamativo {
+    color: red;
+}
+
+.oferta-info {
+    display: block;
+    padding: 16px;
+}
+
+
+img {
+    width: 400px;
+    height: 350px;
+}
