--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     padding: 12px 64px;
 }
 
+main {
+    margin: 100px ;
+}
 h3 {
-    flex-grow: 1;
-    margin-left: 70px
+    width: 100%;
 }
 
 .links {
@@ -42,6 +44,7 @@ button {
     border: 1px solid black;
     background-color: rgb(41, 100, 225);
     height: 32px;
+    color: white;
 }
 
 #contacto-button {
@@ -52,7 +55,8 @@ button {
 .oferta {
     clear: both;
     display: flex;
-    align-items:center
+    flex-direction: row;
+    position: relative;
 }
 
 #oferta-texto-llamativo {
@@ -61,11 +65,45 @@ button {
 
 .oferta-info {
     display: block;
-    padding: 16px;
+    padding: 0px 32px;
+    
 }
 
 
-img {
-    width: 400px;
-    height: 350px;
+.oferta-list {
+    display: flex;
+    gap: 12px;
+}
+
+.imagen-label {
+    position: absolute;
+    background-color: green;
+    padding: 10px;
+    color: white;
+    top: 25px;
+    left: 15px;
+}
+
+.imagen-accesorio {
+    display: ;
+}
+
+.accesorios-recomendados {
+    display:flex;
+    gap: 100px;
+}
+
+.accesorio {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: flex-start;
+    border: 1px solid grey;
+    padding: 20px;
+}
+
+.sorteo {
+    display: flex;
+    justify-content: baseline;
+    background-color:antiquewhite;
 }
