--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ input {
 /* footer */
 
 .footer-text {
+    height: 4em;
     display: flex;
     justify-content: center;
     align-items: center;
